--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,8 +2,16 @@
   width: 27px;
 }
 
+.cart-container {
+  width: 30%;
+}
+
 .navbar {
   background-color: #ffffff;
+}
+
+.nav-links {
+  width: 30%;
 }
 
 .navbar-toggler {
