--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -3,8 +3,19 @@
   padding: 0.5rem;
   background-color: #c21717;
 }
+
 #card img {
   height: 5rem;
+}
+
+.add-to-cart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  color: white;
+  padding: 1rem;
+  text-align: center;
 }
 
 #card:hover {
