--- a/src/styles/checkout.css
+++ b/src/styles/checkout.css
@@ -1,6 +1,6 @@
 #checkout-container {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   height: 100%;
 }
