--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,3 +1,7 @@
+:root {
+  --color-red: #ad0101;
+}
+
 .menu-subtitle {
   font-weight: 300;
   font-family: sans-serif;
@@ -15,20 +19,20 @@
 
 .food-items:hover {
   cursor: pointer;
-  color: #c21717;
+  color: var(--color-red);
   transform: scale(1.2, 1.2);
   transition: 0.3s ease-in-out;
 }
 
 .btn.guide {
-  background-color: #c21717;
+  background-color: var(--color-red);
   border-radius: 0;
-  border: solid 2px #c21717;
+  border: solid 2px var(--color-red);
 }
 
 .btn.guide:hover {
   background-color: #ffffff;
-  color: #c21717;
+  color: var(--color-red);
   border-radius: 0;
 }
 
