--- a/src/styles/locations.css
+++ b/src/styles/locations.css
@@ -1,5 +1,18 @@
+:root {
+  --color-red: #ad0101;
+  --color-white: rgb(255, 255, 255);
+}
+
 #location-container {
   margin-top: 7em;
+}
+
+#search-title {
+  color: var(--color-red);
+}
+
+#location-input {
+  margin-bottom: 2em;
 }
 
 #map {
