--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -39,6 +39,11 @@
   font-weight: 500;
 }
 
+.container-fluid {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
 @media (max-width: 430px) {
   .navbar .order-now {
     font-size: 0.9rem;
@@ -50,5 +55,24 @@
 
   #logo {
     width: 9rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .container-fluid {
+    flex-direction: row;
+  }
+
+  .header-order .container-fluid:nth-child(2) {
+    order: 3;
+  }
+  .header-order .container-fluid:nth-child(3) {
+    order: 2;
+  }
+}
+
+@media (max-width: 428px) {
+  .container-fluid .btn.order-now {
+    display: none;
   }
 }
