--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -9,6 +9,7 @@
 
 .menu-image {
   width: 100%;
+  margin-top: 3em;
 }
 
 .food-items img {
@@ -38,17 +39,13 @@
 
 @media (min-width: 881px) and (max-width: 1220px) {
   .menu-image {
-    height: 11.5rem;
+    height: 12rem;
   }
 }
 
 @media (min-width: 280px) and (max-width: 880px) {
   .menu-image {
-    display: none;
-  }
-  .mobile-image {
-    display: block !important;
-    width: 100%;
+    height: 5rem;
   }
 }
 
