--- a/src/styles/ingredients.css
+++ b/src/styles/ingredients.css
@@ -7,3 +7,14 @@
 #card-ingredients img {
   height: 7.5rem;
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.297);
+  backdrop-filter: blur(5px);
+  z-index: 999;
+}
